--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=finadi
+# Configuração do banco de dados MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/bd2
+spring.datasource.username=root
+spring.datasource.password=123456
+
+# Definição do driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Configuração do JPA/Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
