--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ target/
 *.iws
 *.iml
 *.ipr
-
+.angular
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
@@ -28,6 +28,6 @@ target/
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
-
+/node_modules
 ### VS Code ###
 .vscode/
