--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=finadi
 # Configuração do banco de dados MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/bd2
+spring.datasource.url=jdbc:mysql://localhost:3306/finadi
 spring.datasource.username=root
 spring.datasource.password=123456
 
@@ -11,3 +11,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.web.resources.cache.period=0
