atualização para case insentive enums

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,25 @@
 spring.application.name=finadi
-# Configuração do banco de dados MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/finadi
-spring.datasource.username=root
+
+
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=finadi
+
+spring.datasource.username=postgres
 spring.datasource.password=123456
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Definição do driver
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# Configuração do JPA/Hibernate
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
 spring.jpa.show-sql=true
 
 spring.web.resources.cache.period=0
+spring.jackson.mapper.accept-case-insensitive-enums=true
+
+
+
+
+
+
+
